Update projects to fillow industry standards